Simple implementation of GPS tracker that sends every 5 minutes.
See `readme.md`

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,19 @@
 platform = asrmicro650x
 board = cubecell_gps
 framework = arduino
-monitor_speed = 9600
+monitor_speed = 115200
+
+# all settings on https://docs.platformio.org/en/stable/platforms/asrmicro650x.html
+board_build.arduino.lorawan.region = EU868
+board_build.arduino.lorawan.class = CLASS_A
+board_build.arduino.lorawan.netmode = OTAA
+board_build.arduino.lorawan.adr = ON
+board_build.arduino.lorawan.uplinkmode = CONFIRMED
+board_build.arduino.lorawan.net_reserve = OFF
+board_build.arduino.lorawan.at_support = OFF
+board_build.arduino.lorawan.rgb = DEACTIVE
+board_build.arduino.lorawan.preamble_length = 8
+board_build.arduino.lorawan.debug_level = FREQ_AND_DIO
 
 [platformio]
 description = Simple GPS tracker implementation.
